--- a/public/html/invoice.html
+++ b/public/html/invoice.html
@@ -10,6 +10,10 @@
 </head>
 
 <body>
+
+  <!--<div class="invoice-initialLine">
+    <hr>
+  </div>-->
   <section class="area-factura">
     <div class="invoice-personalInfo">
       <h3>Francisco Jimenez</h3>
@@ -45,15 +49,39 @@
 
       </div>
     </div>
-
+    <div class="invoice-lineHigher">
+      <hr>
+    </div>
     <div class="invoice-amount">
-        <table></table>
+      <table></table>
+    </div>
+    <div class="invoice-lineLower">
+      <hr>
     </div>
 
+    <div class="invoice-detail">
+      <table>
+        <tr class="invoice-header">
+          <Th>Cantidad</Th>
+          <th>Descripcion</th>
+          <th>Precio Unitario</th>
+          <th>Importe</th>
+        </tr>
+        <tr class="invoice-body">
+          <td>1</td>
+          <td>2</td>
+          <td>3</td>
+          <td>4</td>
+        </tr>
+      </table>
+    </div>
     <div class="invoice-condition">
 
     </div>
 
+    <!--<div class="invoice-endLine">
+      <hr>
+    </div>-->
 
   </section>
 </body>
